--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,6 +1,22 @@
-%p#notice= notice
 
-
-= link_to 'Edit', edit_recipe_path(@recipe)
-\|
-= link_to 'Back', recipes_path
+.nav.justify-content-end
+  = link_to '一覧', recipes_path, class: 'nav-link'
+%table.table.table-hover
+  %tbody
+    %tr
+      %th= Recipe.human_attribute_name(:name)
+      %td= @recipe.name
+    %tr
+      %th= Recipe.human_attribute_name(:score)
+      %td= @recipe.score
+    %tr
+      %th= Recipe.human_attribute_name(:description)
+      %td= auto_link(simple_format(h(@recipe.description), {}, sanitize: false, wrapper_tag: "div"))
+    %tr
+      %th= Recipe.human_attribute_name(:created_at)
+      %td= @recipe.created_at
+    %tr
+      %th= Recipe.human_attribute_name(:updated_at)
+      %td= @recipe.updated_at
+= link_to "編集", edit_recipe_path, class: 'btn btn-primary mr-3'
+= link_to '削除', @recipe, method: :delete, data: { confirm: "「#{@recipe.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
