--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,5 +1,7 @@
 %h1 ズボラ一覧
 
+= link_to '新規登録', new_recipe_path, class: 'btn btn-primary'
+
 %table.table.table-hover
   %thead.thead-default
     %tr
