--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -8,6 +8,9 @@
     = f.label :name
     = f.text_field :name, class: 'form-control'
   .form-group
+    = f.label :original_url
+    = f.text_field :original_url, class: 'form-control'
+  .form-group
     = f.label :description
     = f.text_area :description, row: 5, class: 'form-control'
   .form-group
