--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -18,5 +18,23 @@
     %tr
       %th= Recipe.human_attribute_name(:updated_at)
       %td= @recipe.updated_at
+    %tr
+      %th= Food.model_name.human
+      %td
+        %ol
+          - @recipe.foods.each do |food|
+            %li= food.name
+    %tr
+      %th= Step.model_name.human
+      %td
+        %ol
+          - @recipe.steps.each do |step|
+            %li= step.description
+    %tr
+      %th= Kitchenware.model_name.human
+      %td
+        %ol
+          - @recipe.kitchenwares.each do |kw|
+            %li= kw.name
 = link_to "編集", edit_recipe_path, class: 'btn btn-primary mr-3'
 = link_to '削除', @recipe, method: :delete, data: { confirm: "「#{@recipe.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
