--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -14,6 +14,13 @@
     = f.label :original_url
     = f.text_field :original_url, class: 'form-control'
   .form-group
+    = f.radio_button :category_id, "1", checked: true
+    = f.label :category_id, "和食", value: "1"
+    = f.radio_button :category_id, "2"
+    = f.label :category_id, "洋食", value: "2"
+    = f.radio_button :category_id, "3"
+    = f.label :category_id, "中華", value: "3"
+  .form-group
     = f.label :description
     = f.text_area :description, row: 5, class: 'form-control'
   .form-group
