--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -10,6 +10,9 @@
       %th= Recipe.human_attribute_name(:original_url)
       %td= auto_link @recipe.original_url
     %tr
+      %th= Recipe.human_attribute_name(:category)
+      %td= @recipe.category.name
+    %tr
       %th= Recipe.human_attribute_name(:score)
       %td= @recipe.score
     %tr
