--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,16 +2,15 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title ズボラ
+    %title ズボラッシュ
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand ズボラ
+    = render 'layouts/header'
 
-    .container
+    .container.mt-3
       - if flash.notice.present?
         .alert.alert-success= flash.notice
       = yield
