--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   %nav.navbar.navbar-expand-md.navbar-light.bg-dark
     = link_to "ズボラッシュ", root_path, class: "navbar-brand text-white"
 
-    %button.navbar-toggler{type: "button", data:{toggle:"collapse", target: "menu"}}= '&#9776;'.html_safe
+    %button.navbar-toggler{type: "button", data:{toggle:"collapse", target: "#menu"}}= '&#9776;'.html_safe
 
     #menu.collapse.navbar-collapse
       %ul.navbar-nav.ml-auto
