レスポンシブ対応

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,15 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{charset: 'UTF-8'}/
+    %meta{ name:"viewport", content: "target-densitydpi=device-dpi, width=device-width, maximum-scale=1.0, user-scalable=yes"}
+
     %title ズボラッシュ
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  %body
+  %body{ style: "-webkit-text-size-adjust: 100%;" }
     = render 'layouts/header'
 
     .container.mt-3
